fix translation bug and white space in notes

--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -33,6 +33,10 @@
 	h3[data-i18n='notes'], 
 	div.sheet-collapse { 
 		grid-column: 1 / #{$endColumn};
+
+    span[name='attr_notes'] {
+      white-space: pre-line;
+    }
 	}
 
 	input.sheet-collapse-flag {
